--- a/package.json
+++ b/package.json
@@ -12,7 +12,26 @@
   "dependencies": {
     "express": "^4.18.2"
   },
-  "scripts":{
+
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LAChiranaPlat/APINode.git"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "scripts": {
     "start": "node app.js",
+    "test": "c8 mocha -p -j 2 --exit test/*.test.js"
+  },
+
+  "devDependencies": {
+    "c8": "^8.0.0",
+    "mocha": "^10.0.0",
+    "supertest": "^6.0.0"
   }
+
 }
+
+
